[gd_scene load_steps=3 format=3 uid="uid://planet-hop-main"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_main"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1"]
radius = 64.0

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0.2, 1)

[node name="Stars" type="CPUParticles2D" parent="Background"]
position = Vector2(640, 360)
amount = 50
lifetime = 10.0
emission_shape = 3
emission_rect_extents = Vector2(640, 360)
spread = 0.0
initial_velocity_min = 0.0
initial_velocity_max = 0.0
scale_amount_min = 0.1
scale_amount_max = 0.3
color = Color(1, 1, 1, 0.7)

[node name="GameElements" type="Node2D" parent="."]

[node name="Astronaut" type="Node2D" parent="GameElements"]
position = Vector2(640, 100)

[node name="ColorRect" type="ColorRect" parent="GameElements/Astronaut"]
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
color = Color(0.8, 0.8, 0.8, 1)

[node name="Rocket" type="Node2D" parent="GameElements"]
position = Vector2(640, 360)
scale = Vector2(0.5, 0.5)

[node name="Polygon2D" type="Polygon2D" parent="GameElements/Rocket"]
color = Color(0.7, 0.7, 0.7, 1)
polygon = PackedVector2Array(-32, 64, -48, 32, -48, -32, -32, -64, 0, -80, 32, -64, 48, -32, 48, 32, 32, 64)

[node name="Planets" type="Node2D" parent="GameElements"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="PromptLabel" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -200.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 80.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Click the planets!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="UI"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -100.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 50.0
grow_horizontal = 0
text = "Menu"

[node name="Effects" type="Node2D" parent="."]

[node name="Confetti" type="CPUParticles2D" parent="Effects"]
emitting = false
amount = 100
lifetime = 2.0
one_shot = true
emission_shape = 1
emission_sphere_radius = 50.0
spread = 45.0
initial_velocity_min = 200.0
initial_velocity_max = 400.0
angular_velocity_min = -180.0
angular_velocity_max = 180.0
gravity = Vector2(0, 500)
scale_amount_min = 0.5
scale_amount_max = 1.5
color = Color(1, 0.5, 0, 1)
color_ramp = null